; ModuleID = '/home/carl/AnghaBench/linux/security/safesetid/extr_securityfs.c_parse_policy_line.c'
source_filename = "/home/carl/AnghaBench/linux/security/safesetid/extr_securityfs.c_parse_policy_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.setuid_rule = type { i8*, i8* }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.setuid_rule*)* @parse_policy_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_policy_line(%struct.file* %0, i8* %1, %struct.setuid_rule* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.setuid_rule*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.setuid_rule* %2, %struct.setuid_rule** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i8* @strchr(i8* %12, i8 signext 58)
  store i8* %13, i8** %8, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %4, align 4
  br label %70

19:                                               ; preds = %3
  %20 = load i8*, i8** %8, align 8
  store i8 0, i8* %20, align 1
  %21 = load i8*, i8** %8, align 8
  %22 = getelementptr inbounds i8, i8* %21, i32 1
  store i8* %22, i8** %8, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 @kstrtou32(i8* %23, i32 0, i32* %10)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %19
  %28 = load i32, i32* %9, align 4
  store i32 %28, i32* %4, align 4
  br label %70

29:                                               ; preds = %19
  %30 = load i8*, i8** %8, align 8
  %31 = call i32 @kstrtou32(i8* %30, i32 0, i32* %11)
  store i32 %31, i32* %9, align 4
  %32 = load i32, i32* %9, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %29
  %35 = load i32, i32* %9, align 4
  store i32 %35, i32* %4, align 4
  br label %70

36:                                               ; preds = %29
  %37 = load %struct.file*, %struct.file** %5, align 8
  %38 = getelementptr inbounds %struct.file, %struct.file* %37, i32 0, i32 0
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* %10, align 4
  %43 = call i8* @make_kuid(i32 %41, i32 %42)
  %44 = load %struct.setuid_rule*, %struct.setuid_rule** %7, align 8
  %45 = getelementptr inbounds %struct.setuid_rule, %struct.setuid_rule* %44, i32 0, i32 1
  store i8* %43, i8** %45, align 8
  %46 = load %struct.file*, %struct.file** %5, align 8
  %47 = getelementptr inbounds %struct.file, %struct.file* %46, i32 0, i32 0
  %48 = load %struct.TYPE_2__*, %struct.TYPE_2__** %47, align 8
  %49 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = load i32, i32* %11, align 4
  %52 = call i8* @make_kuid(i32 %50, i32 %51)
  %53 = load %struct.setuid_rule*, %struct.setuid_rule** %7, align 8
  %54 = getelementptr inbounds %struct.setuid_rule, %struct.setuid_rule* %53, i32 0, i32 0
  store i8* %52, i8** %54, align 8
  %55 = load %struct.setuid_rule*, %struct.setuid_rule** %7, align 8
  %56 = getelementptr inbounds %struct.setuid_rule, %struct.setuid_rule* %55, i32 0, i32 1
  %57 = load i8*, i8** %56, align 8
  %58 = call i32 @uid_valid(i8* %57)
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %66

60:                                               ; preds = %36
  %61 = load %struct.setuid_rule*, %struct.setuid_rule** %7, align 8
  %62 = getelementptr inbounds %struct.setuid_rule, %struct.setuid_rule* %61, i32 0, i32 0
  %63 = load i8*, i8** %62, align 8
  %64 = call i32 @uid_valid(i8* %63)
  %65 = icmp ne i32 %64, 0
  br i1 %65, label %69, label %66

66:                                               ; preds = %60, %36
  %67 = load i32, i32* @EINVAL, align 4
  %68 = sub nsw i32 0, %67
  store i32 %68, i32* %4, align 4
  br label %70

69:                                               ; preds = %60
  store i32 0, i32* %4, align 4
  br label %70

70:                                               ; preds = %69, %66, %34, %27, %16
  %71 = load i32, i32* %4, align 4
  ret i32 %71
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @kstrtou32(i8*, i32, i32*) #1

declare dso_local i8* @make_kuid(i32, i32) #1

declare dso_local i32 @uid_valid(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
